syntax = "proto3";

package course;

option go_package = "internal/ports/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CourseService {
  rpc ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc addCourse(CourseRequest) returns (CourseResponse) {}
  rpc getAll(AllCourseRequest) returns (AllCourseResponse) {}
}

message AllCourseRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message AllCourseResponse {
  repeated CourseResponse courses = 1;
  int64 total = 2;
}

message CourseRequest {
  string name = 1;
  string description = 2;
  string photoname = 3;
  string mime = 4;
  bytes photo = 5;
}

message CourseResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp createdDate = 4;
  string photo_url = 5;
}
